# cmake-gcovr-oos

./: CMakeLists.txt  build.sh
libs/: CMakeLists.txt
libs/bar/: CMakeLists.txt  bar.c  bar.h
libs/foo/: CMakeLists.txt  foo.c  foo.h
test/: CMakeLists.txt  test_program.c
